style: ajustes visuais na responsividade e título da página
- Tornado os nomes dos Pokémon responsivos com uso de flex e clamp()
- Corrigido o título da aba para refletir corretamente a Pokedex
- Atualizado o favicon para uma pokébola mais representativa

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
+    <link rel="icon" href="https://cdn-icons-png.freepik.com/512/16025/16025478.png?ga=GA1.1.119585503.1745274652">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
     <link href="src/css/responsibility.css" rel="stylesheet">
 </head>
 
-<body>  
+<body>   
     <header>
 
         <a href="#">
@@ -35,7 +36,7 @@
         <ul class="pokemonList">
             <li class="pokemonCard">
                 <div class="inf">
-                    <span>Bulbasaur </span><span>#001</span>
+                    <span>Bulbasaur#001</span>
                 </div>
                 <img src="./src/imagens/bulbasaur.gif" alt="bulbasaur" class="gif">
                 <ul class="types">
@@ -48,7 +49,7 @@
 
             <li class="pokemonCard">
                 <div class="inf">
-                    <span>Ivysaur </span><span>#002</span>
+                    <span>Ivysaur#002</span>
                 </div>
                 <img src="./src/imagens/ivysaur.gif" alt="ivysaur" class="gif">
                 <ul class="types">
@@ -61,7 +62,7 @@
 
             <li class="pokemonCard">
                 <div class="inf">
-                    <span>Venusaur </span><span>#003</span>
+                    <span>Venusaur#003</span>
                 </div>
                 <img src="./src/imagens/venusaur.gif" alt="venusaur" class="gif">
                 <ul class="types">
@@ -74,7 +75,7 @@
 
             <li class="pokemonCard">
                 <div class="inf">
-                    <span>Charmander </span><span>#004</span>
+                    <span>Charmander#004</span>
                 </div>
                 <img src="./src/imagens/charmander.gif" alt="charmander" class="gif">
                 <ul class="types">
@@ -85,7 +86,7 @@
 
             <li class="pokemonCard">
                 <div class="inf">
-                    <span>Charmeleon </span><span>#005</span>
+                    <span>Charmeleon#005</span>
                 </div>
                 <img src="./src/imagens/charmeleon.gif" alt="charmeleon" class="gif">
                 <ul class="types">
@@ -96,7 +97,7 @@
 
             <li class="pokemonCard">
                 <div class="inf">
-                    <span>Charizard </span><span>#006</span>
+                    <span>Charizard#006</span>
                 </div>
                 <img src="./src/imagens/charizard.gif" alt="charizard" class="gif">
                 <ul class="types">
@@ -108,7 +109,7 @@
 
             <li class="pokemonCard">
                 <div class="inf">
-                    <span>Squirtle </span><span>#007</span>
+                    <span>Squirtle#007</span>
                 </div>
                 <img src="./src/imagens/squirtle.gif" alt="squirtle" class="gif">
                 <ul class="types">
@@ -119,7 +120,7 @@
 
             <li class="pokemonCard">
                 <div class="inf">
-                    <span>Wartortle </span><span>#008</span>
+                    <span>Wartortle#008</span>
                 </div>
                 <img src="./src/imagens/wartortle.gif" alt="wartortle" class="gif">
                 <ul class="types">
@@ -131,7 +132,7 @@
 
             <li class="pokemonCard">
                 <div class="inf">
-                    <span>Blastoise </span><span>#009</span>
+                    <span>Blastoise#009</span>
                 </div>
                 <img src="./src/imagens/blastoise.gif" alt="blastoise" class="gif">
                 <ul class="types">
@@ -143,7 +144,7 @@
 
             <li class="pokemonCard">
                 <div class="inf">
-                    <span>Caterpie</span><span> #010</span>
+                    <span>Caterpi #010</span>
                 </div>
                 <img src="./src/imagens/caterpie.gif" alt="caterpie" class="gif">
                 <ul class="types">
